# AgroCore_Local

./: .gitignore  README.md  TESTS_COMPLETED.md  TEST_GENERATION_SUMMARY.md  main.dart  pubspec.yaml
.github/workflows/: dart.yml
Agrocore/: CMakeLists.txt  Nuevo  main.cpp
Agrocore/qml/Agrocore/: DashboardIngeniero.qml  Main.qml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
assets/mock/: orders.json
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/app/core/constants/: routes.dart  thresholds.dart
lib/app/data/auth/: auth_controller.dart  auth_repository.dart  auth_service.dart  local_auth_repository.dart  ocal_auth_db.dart
lib/app/router/: app_router.dart
lib/app/theme/: app_theme.dart
lib/core/router/: routes.dart
lib/core/themes/: app_theme.dart
lib/dashboards/: ingeniero_Dashboard.dart
lib/features/dashboard_agricultor/pages/: agricultor_home_page.dart
lib/features/dashboard_ingeniero/pages/: ingeniero_home_page.dart
lib/features/gestion_pedidos/models/: order_model.dart
lib/features/gestion_pedidos/pages/: create_order_page.dart  edit_order_page.dart  (+1 more)
lib/features/login/: login.dart
lib/pages/: login.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner/Configs/: AppInfo.xcconfig
scripts/: run_gestion_pedidos_tests.sh
test/: widget_test.dart
test/features/gestion_pedidos/: README.md
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+28 files in other folders)
